improved some layout issues for eidogo, let the gui do the layout for the game interface components, initial new layout version for gospeed

--- a/gospeed_prototype/css/gospeed_prototype.css
+++ b/gospeed_prototype/css/gospeed_prototype.css
@@ -32,7 +32,7 @@ div#menu p.selected {
 }
 
 
-/* Layout for the debug output */
+/* Layout for the RGF debug output */
 div.gui_game_rgf {
     position:      absolute;
     width:         640px;
@@ -40,31 +40,9 @@ div.gui_game_rgf {
     top:           560px;
     left:          4px;
 }
-div.gui_player_sgf {
-    position:      absolute;
-    width:         422px;
-    height:        500px;
-    top:           560px;
-    left:          650px;
-}
-div.gui_player_actions {
-    position:      absolute;
-    width:         382px;
-    height:        500px;
-    top:           560px;
-    left:          1078px;
-}
 
 
-/* Layout for the Eidogo Player */
-div.gui_player {
-    position:      absolute;
-    left:          650px;
-    top:           4px;
-}
-
-
-/* Layout for boxes */
+/* (Default) Layout for boxes */
 div.box_title {
     top:           0px;
     left:          0px;
@@ -89,21 +67,66 @@ div.box_body {
 }
 
 
-/* Controls */   
-div.gui_player_interface {
+/* Layout for the GoSpeed Player */
+div.gui_player {
     position:      absolute;
-    left:          654px;
-    top:           471px;
+    left:          650px;
+    top:           4px;
 }
-div.gui_player_interface div.gui_media_interface {
+div.gui_player table.player_stats {
+    border-collapse: collapse;
+    margin: 20px auto;
+    padding: 0px;
+    font-family: monospace;
 }
-div.gui_player_interface div.gs-step-back {
+div.gui_player table.player_stats td {   
+    border-collapse: collapse;
+    padding: 5px;
+    margin: 0px;
+    border: 1px solid #888;
+    background-color: #EEE;
+}
+div.gui_player table.player_stats th { 
+    border-collapse: collapse;
+    padding: 5px;
+    margin: 0px;
+    text-align: right;
+}
+div.gui_player div.player_tree {   
+    margin: 20px auto;
+    position: relative;
+    font-family: monospace;
+    height: 100px;
+    width: 700px;
+    border: 1px solid #888;
+    overflow: auto;
+}
+div.gui_player div.player_comments { 
+    margin: 20px auto;
+    width: 400px;
+    font-family: monospace;
+    border: 1px solid #888;
+    padding: 5px;
+}
+
+
+/* Controls */
+div.player_interface {
+    position:      relative;
+    left:          0px;
+    top:           0px;
+}
+div.player_interface div.gui_media_interface {
+    margin:        4px;
+}
+div.player_interface a.gs-step-back {
     position:      absolute;
     left:          160px;
     top:           4px;
 }
-div.gui_player_interface div.gs-step-forward {
+div.player_interface a.gs-step-forward {
     position:      absolute;
     left:          220px;
     top:           4px;
 }
+
